# animaliens-smart-contract

./: LICENSE  README.md  animaliens.cabal  default.nix  shell.nix
app/: Main.hs
nix/: default.nix
nix/pkgs/haskell/: haskell.nix
scripts/: buy.plutus  compile.sh  generate-datums.sh  hash-plutus.sh
scripts/core/: cancel-tx.sh  lock-1-input-tx.sh  swap-buy-tx.sh
scripts/failure-cases/: double-swap.sh  nft-goes-wrong-address-tx.sh  too-little-ada-fees.sh  too-little-ada-swap-tx.sh  wrong-nft-swap-tx.sh
scripts/happy-path/: cancel-2-tx.sh  cancel-no-royalty-tx.sh  cancel-tx.sh  lock-2-tx.sh  lock-tx.sh  swap-tx.sh
scripts/mainnet/: buy.addr
scripts/minting/: mint-0-policy.sh  mint-1-policy.sh  mint-2-policy.sh
scripts/query/: sc.sh
scripts/scratch/: burn-utxo.sh  buyer-to-seller-utxo.sh
scripts/shared-redeemers/: sell-redeemer.json
scripts/testnet/: buy.addr  protocol-parameters.json
scripts/tests/: all.sh  generic-failure-case.sh  lock-cancel.sh  lock-swap.sh  missing-fee.sh  missing-nft.sh  nft-goes-to-wrong-address.sh  too-little-ada.sh  too-little-fees.sh  too-little-royalties.sh  wrong-nft.sh
scripts/wallets/: make-all-wallets.sh
src/: AnimAliens.hs
