cabal-version:      2.4
name:               animaliens
version:            1.0.0.0

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      AnimAliens
    build-depends:
      base >= 4.9 && < 5,
      aeson,
      bytestring,
      containers,
      freer-extras,
      plutus-tx-plugin,
      plutus-tx,
      plutus-ledger,
      plutus-ledger-api,
      serialise,
      cardano-api,
      text,

    hs-source-dirs: src

executable create-smart-contract
    import: lang
    hs-source-dirs: app
    main-is:        Main.hs
    ghc-options:    -threaded -rtsopts -with-rtsopts=-T
    build-depends:
      , animaliens
      , base
      , cardano-api
      , optparse-applicative
      , plutus-ledger
      , plutus-tx
      , plutus-ledger-api
